--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,10 @@ members = [
     "problem_4",
     "problem_5",
     "problem_6",
-    "problem_7"
+    "problem_7",
+    "problem_10"
 ]
+
+[profile.release]
+lto = true
+codegen-units = 1
