--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ members = [
     "problem_5",
     "problem_6",
     "problem_7",
-    "problem_10"
+    "problem_10",
+    "problem_19"
 ]
 
 [profile.release]
