--- a/problem_006/Cargo.toml
+++ b/problem_006/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
-name = "problem_19"
+name = "problem_006"
 version = "0.1.0"
 authors = ["Jan Baudisch <dev@baudisch.xyz>"]
 edition = "2018"
 
 [dependencies]
+common = { path = "../common" }
